Fluxo básico de criação de Room
