# service/src/main/resources/api.yml
@@ -32,6 +32,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ResponseError'
+
   /rooms:
     post:
       summary: 'Creates a room'
@@ -53,6 +54,7 @@ paths:
                 $ref: '#/components/schemas/RoomDTO'
         422:
           $ref: '#/components/responses/UnprocessableEntity'
+
 components:
   schemas:
     CreateRoomDTO:
@@ -62,16 +64,17 @@ components:
           type: string
         seats:
           type: integer
+
     RoomDTO:
       type: object
+      allOf:
+        - $ref: '#/components/schemas/CreateRoomDTO'
+        - type: object
       properties:
         id:
           type: integer
           format: int64
-        name:
-          type: string
-        seats:
-          type: integer
+
     ResponseError:
       type: object
       required:
@@ -85,6 +88,7 @@ components:
           type: string
         message:
           type: string
+
   responses:
     UnprocessableEntity:
       description: The server understand the content type of the request entity but was unable to process the contained instructions.
